Touch events weren't registering. Attempted fix. Also trying to make the canvas stationary on mobile.

--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@ html, body {
   padding: 0;
 }
 canvas {
-  display: block;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 #worm-game {
